<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_parameter_server</name>
  <version>0.2.1</version>
  <description>TODO</description>
  <maintainer email="brian.wilcox@intel.com">Brian Wilcox</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_common</build_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>rclcpp_components</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
